<resources>
    <string name="app_name">MEDLis</string>
    <string name="facebook_app_id">691271798329869</string>
    <string name="fb_login_protocol_scheme">fb691271798329869</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="personal_header">Personalização</string>
    <string name="accessibility_header">Acessibilidade</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Notificações</string>
    <string name="attachment_title">Medalhas</string>
    <!--    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>-->

    <string name="title_activity_take_picture">TakePictureActivity</string>

    <!-- Accessibility Preferences -->
    <string name="colorblind_title">Modo daltónico</string>
    <string name="colorblind_summary_on">Adapta as cores da aplicação de forma a ajustar-se a pessoas com daltonismo
    </string>
    <string name="colorblind_summary_off">Adapta as cores da aplicação de forma a ajustar-se a pessoas com daltonismo</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="signed_in_fmt">Sucesso</string>
</resources>
