<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>-->

    <PreferenceCategory app:title="@string/personal_header">
        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />
        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:title="@string/attachment_title" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/accessibility_header">
        <SwitchPreferenceCompat
            app:key="attachment"
            app:summaryOff="@string/colorblind_summary_off"
            app:summaryOn="@string/colorblind_summary_on"
            app:title="@string/colorblind_title" />
    </PreferenceCategory>
</PreferenceScreen>